--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="index.css"
+    rel="stylesheet"
+  />
     <title>Reach Hero</title>
+
 </head>
 <body>
 
     <div id="root">
         <h1>Rachit is Here</h1>
     </div>
+
+    <!-- <script>
+         
+    const heading = document.createElement("h1");
+    heading.innerHTML="This is JavaScript"
+
+    const root=document.getElementById("root");
+    root.appendChild(heading);
+    </script> -->
 
     
 
